[CP-1907] fix tiny modal on Safari

--- a/packages/styles/scss/components/_modal.scss
+++ b/packages/styles/scss/components/_modal.scss
@@ -295,7 +295,6 @@ $label-shorter-width: 10em !default;
 
 	.modal-footer {
 		padding-bottom: rem(10);
-		min-height: rem(59); // only for Safari the ugly
 	}
 
 	.modal-header {
